grub2 (1.99~20110104-2) UNRELEASED; urgency=low

  * Support long command lines as per the 2.06 Linux boot protocol, from the
    upstream 'longlinuxcmd' branch.
  * Add a background_color command, from the upstream 'parse-color' branch.

 -- Colin Watson <cjwatson@debian.org>  Wed, 05 Jan 2011 11:13:43 +0000

grub2 (1.99~20110104-1) experimental; urgency=low

  * New Bazaar snapshot.
    - Don't emit drivemap directive for Windows Server 2008 (closes:
      #607687).
    - Don't add spurious RAID array members (closes: #605357).
    - Improve presentation of Xen menu entries (closes: #607867).
    - Fix PCI probing hangs by skipping remaining functions on devices that
      do not implement function 0 (closes: #594967).
    - Fix typo in descriptions of extract_legacy_entries_source and
      extract_legacy_entries_configfile (LP: #696721).
  * Merge 1.98+20100804-12:
    - Use semicolons rather than commas to separate size from model in
      debconf disk and partition descriptions.
  * Add full btrfs support, from the upstream 'butter' branch.
  * Support partitioned loop devices and improve devmapper support, from the
    upstream 'devmapper' branch.
  * Add squashfs 4 support, from the upstream 'squash' branch.

 -- Colin Watson <cjwatson@debian.org>  Tue, 04 Jan 2011 16:12:45 +0000

grub2 (1.99~20101221-1) experimental; urgency=low

  * New Bazaar snapshot.
    - Initialise next pointer when creating multiboot module (closes:
      #605567).
    - Fix gettext quoting to work with bash as /bin/sh, and make echo
      UTF-8-clean so that (at least) Catalan boot messages are displayed
      properly (closes: #605615).
    - Fix use of uninitialised memory in Reed-Solomon recovery code
      (LP: #686705).

 -- Colin Watson <cjwatson@debian.org>  Tue, 21 Dec 2010 17:43:52 +0000

grub2 (1.99~20101210-2) experimental; urgency=low

  * Automatically remove MD devices from device.map on upgrade, since the