@@ -3,6 +3,8 @@ grub2 (1.99~20110104-2) UNRELEASED; urgency=low
   * Support long command lines as per the 2.06 Linux boot protocol, from the
     upstream 'longlinuxcmd' branch.
   * Add a background_color command, from the upstream 'parse-color' branch.
+  * Update branch_devmapper.patch, adding a #include to fix a build failure
+    on Ubuntu amd64.
 
  -- Colin Watson <cjwatson@debian.org>  Wed, 05 Jan 2011 11:13:43 +0000
 
